# pygame-multiplayer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/pygame_multiplayer/: __init__.py  test.py  test2.py
src/pygame_multiplayer/commands/: __init__.py  commands.py  flags.py
src/pygame_multiplayer/models/: network.py
src/pygame_multiplayer/network/: __init__.py  client.py  server.py
tests/: client.py  general.py  server.py  test_flags.py  test_general.py
