[tool.poetry]
name = "pygame-multiplayer"
version = "0.1.0"
description = "Pygame Framework for Multiplayer Games"
authors = [
    "dpfurners <dpfurner@tsn.at>",
    "kloaChristoph <christoph.alexander.holas@gmail.com>"
]
readme = "README.md"
packages = [{include = "pygame_multiplayer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pytest = "^7.2.1"
python-multiplayer = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
